# llmprompt-nexus

./: .gitignore  MANIFEST.in  README.md  main.py  makefile  nohup.out  perplexity_client.py  pyproject.toml  rate_limiter.py  requirements.txt  setup.py  test.py
clients/: base.py  openai.py  perplexity.py
config/models/: openai.yaml  perplexity.yaml
config/templates/: custom_examples.yaml
docker/: Dockerfile
docs/: TEMPLATES.md
examples/: batch_examples.py  custom_templates_examples.py  default_templates.py  default_templates_examples.py  test_model_config.py
experiments/: experiment_utils.py  main.py  run_translation.py  translation_experiment.py
experiments/books/: experiment.yaml
experiments/ehuhac/: data.csv  experiment.yaml
experiments/tacon/: data.csv  experiment.yaml
experiments/tectra/: data.csv  experiment.yaml
experiments/wikihealth3040/: data.csv  experiment.yaml
experiments/wikihealth3042/: data.csv
experiments/wikihealth3053/: data.csv
experiments/wikihealth3077/: data.csv
inputs/: coches_juntos_sentences.tsv  ehuhac(en-eu).txt  hoteles_juntos_sentences.tsv  lavadoras_juntos_sentences.tsv  moviles_juntos_sentences.tsv  ordenadores_juntos_sentences.tsv  tectra(en-ga).txt  to_csv.py  wikihealth3040(en-ca).txt  wikihealth3042(en-eu).txt  wikihealth3053(en-ga).txt  wikihealth3077(en-es).txt
llmprompt_nexus/: __init__.py  nexus_manager.py
llmprompt_nexus/clients/: perplexity_client.py
llmprompt_nexus/core/: framework.py
llmprompt_nexus/models/: registry.py
models/: registry.py
src/clients/: base.py  (+5 more)
utils/: async_utils.py
(+45 files in other folders)
